Exercise 1, the program builds a dynamic two-dimensional array, the length of a key file, and initializes values in it.

--- a/in.out/in.out.vcxproj
+++ b/in.out/in.out.vcxproj
@@ -127,10 +127,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ex10a.cc" />
     <ClCompile Include="in.out.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="in.out.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
