--- a/in.out/in.out.vcxproj.filters
+++ b/in.out/in.out.vcxproj.filters
@@ -13,15 +13,16 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Resource Files\Exercises">
+      <UniqueIdentifier>{7a927b24-0bb0-4df4-b29c-3f3b5a566413}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="in.out.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="in.out.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
+    <ClCompile Include="ex10a.cc">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
