exercise 1 .In SD is perfect. By entering the names of input and output files by the user.

--- a/in.out/in.out.vcxproj.filters
+++ b/in.out/in.out.vcxproj.filters
@@ -22,7 +22,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ex10a.cc">
-      <Filter>Source Files</Filter>
+      <Filter>Resource Files\Exercises</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
